--- a/app/scss/_libs.scss
+++ b/app/scss/_libs.scss
@@ -3,3 +3,4 @@
 @import "../libs/bootstrap/scss/_utilities.scss";
 @import "../libs/slick/slick.scss";
 @import '../libs/fancybox/fancybox.css';
+@import "../libs/wow/animate.css";
