--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -61,6 +61,43 @@ strong {
     font-weight: bold;
 }
 
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    z-index: 99999;
+    transition: 1s all;
+    opacity: 1;
+    visibility: visible;
+    .loader {
+        width: 75px;
+        height: 75px;
+        border: 10px double #ddd;
+        border-radius: 50%;
+        border-top-color: $accent;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        animation: 1s spin infinite linear;
+    }
+    &.done {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+@keyframes spin {
+    from {
+        transform: translate(-50%,-50%) rotate(0deg)
+    }
+    to {
+        transform: translate(-50%,-50%) rotate(360deg)
+    }
+}
+
 .btn {
     line-height: 52px;
     border-radius: 185px;
@@ -77,6 +114,7 @@ strong {
     font-weight: 600;
     cursor: pointer;
     border: none;
+    transition: all .3s ease-in;
     &.btn-outline {
         border: 2px solid $main;
         line-height: 48px;
@@ -85,6 +123,14 @@ strong {
         color: $main;
         &:hover {
             background: $main;
+            color: #fff;
+        }
+    }
+    &.btn-white {
+        background-color: #fff;
+        color: $accent;
+        &:hover {
+            background-color: #353535;
             color: #fff;
         }
     }
@@ -154,6 +200,15 @@ section {
     color: $main;
     font-size: 17px;
     font-weight: 600;
+    position: relative;
+    z-index: 99;
+    &.f-nav {
+        position: fixed;
+        top: 0;
+        left: 0;
+        background: rgba(255, 255, 255, 0.8);
+        backdrop-filter: blur(84px);
+    }
     &::after {
         content: '';
         position: absolute;
@@ -176,6 +231,10 @@ section {
         list-style: none;
         padding-left: 25px;
         padding-right: 25px;
+        &:hover > .sub-menu {
+            opacity: .95;
+            visibility: visible;
+        }
     }
     &__link {
         color: $main;
@@ -184,6 +243,8 @@ section {
         position: relative;
         min-height: 36px;
         display: inline-block;
+        line-height: 134px;
+        cursor: pointer;
         &.active,
         &:hover {
             color: $main;
@@ -195,7 +256,57 @@ section {
                 background: $liner-gradient;
                 border-radius: 30px;
                 left: 0;
-                bottom: 0;
+                bottom: 44px;
+            }
+        }
+    }
+    .sub-menu {
+        position: absolute;
+        z-index: 9;
+        top: 100%;
+        margin: 0;
+        padding: 0;
+        background: #FFFFFF;
+        border-radius: 0 0 20px 20px;
+        padding: 20px;
+        max-width: 320px;
+        width: 100%;
+        line-height: 1.2;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease-in;
+        li {
+            list-style: none;
+            &:last-child {
+                a {
+                    margin-bottom: 0;
+                }
+            }
+        }
+        a {
+            color: $main;
+            font-weight: 400;
+            text-decoration: none;
+            display: inline-block;
+            margin-bottom: 20px;
+            position: relative;
+            &:hover {
+                &::after {
+                    opacity: 1;
+                    visibility: visible;
+                }
+            }
+            &::after {
+                content: '';
+                position: absolute;
+                left: 0;
+                bottom: -5px;
+                width: 118px;
+                height: 4px;
+                background: $liner-gradient;
+                border-radius: 1px;
+                opacity: 0;
+                visibility: hidden;
             }
         }
     }
@@ -212,6 +323,8 @@ section {
     }
     &__item {
         margin-bottom: 8px;
+        color: $main;
+        text-decoration: none;
         &:last-child {
             margin-bottom: 0;
         }
@@ -229,6 +342,9 @@ section {
     padding-bottom: 0;
     .container {
         max-width: 1430px;
+    }
+    .relative {
+        position: relative;
     }
 }
 .main-carousel {
@@ -256,7 +372,20 @@ section {
     }
 }
 .sign-up {
-    margin-top: 130px;
+    margin-bottom: 260px;
+    &__row {
+        position: absolute;
+        bottom: 305px;
+        left: 100px;
+        max-width: 500px;
+        width: 100%;
+        .btn {
+            margin-right: 16px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
     .btn {
         margin-right: 16px;
         &:last-child {
@@ -265,7 +394,12 @@ section {
     }
 }
 .doctor {
-    position: relative;
+    position: absolute;
+    right: 100px;
+    top: 0;
+    max-width: 707px;
+    width: 100%;
+    z-index: 2;
     min-height: 693px;
     &__title {
         font-size: 33px;
@@ -308,6 +442,11 @@ section {
         line-height: 1.2;
         color: $main;
         margin-bottom: 23px;
+        display: block;
+        text-decoration: none;
+        &:hover {
+            color: $main;
+        }
     }
     &__desc {
         margin: 0;
@@ -527,7 +666,7 @@ section {
         position: absolute;
         left: 15px;
         right: 15px;
-        bottom: 30px;
+        bottom: 15px;
         margin: auto;
 
     }
@@ -549,6 +688,41 @@ section {
         text-align: center;
         margin-left: 6px;
         margin-right: 6px;
+        display: block;
+        position: relative;
+        cursor: pointer;
+        &::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, .4);
+            transition: all .3s ease-out;
+            opacity: 0;
+        }
+        &::before {
+            content: '';
+            position: absolute;
+            z-index: 2;
+            top: 50%;
+            left: 0;
+            right: 0;
+            margin: auto;
+            transform: translateY(-50%);
+            background-image: url(../img/logo-hover.png);
+            width: 120px;
+            height: 88px;
+            transition: all .5s ease-out;
+            opacity: 0;
+        }
+        &:hover {
+            &::after,
+            &::before {
+                opacity: 1;
+            }
+        }
     }
 }
 .slick-dots {
@@ -952,6 +1126,7 @@ section {
     color: #fff;
     display: flex;
     align-items: center;
+    background-attachment: fixed;
     .title {
         color: #fff;
         font-size: 32px;
@@ -969,7 +1144,11 @@ section {
         left: 0;
         top: 0;
         background-image: url(../img/patients.png);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top center;
         z-index: -1;
+        background-attachment: fixed;
     }
 }
 .helodent-section {
