--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -4,13 +4,161 @@
 /*==========  Desktop First  ==========*/
 
 // ≥1200px
-@include media-breakpoint-down(lg) {
-	
+@media only screen and (max-width: 1200px) {
+    .header {
+        min-height: 74px;
+        padding: 0;
+        &::after {
+            left: 0;
+            right: 0;
+        }
+    }
+    .logo {
+        img {
+            max-width: 54px;
+            width: 100%;
+        }
+    }
+    .phone {
+        display: none;
+    }
+    .modile-phone {
+        display: block;
+        float: left;
+        margin-left: 25px;
+        margin-top: 10px;
+    }
+	.btn_mnu {
+        width: 30px;
+        height: 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        background-color: transparent;
+        cursor: pointer;
+        position: absolute;
+        right: 15px;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        transition: all .5s ease;
+        &.active {
+            right: 15px;
+            z-index: 9;
+            .btn_row {
+                &:first-child {
+                    -webkit-transform: rotate(-135deg);
+                    -ms-transform: rotate(-135deg);
+                    -o-transform: rotate(-135deg);
+                    transform: rotate(-135deg);
+                    top: 6px;
+                }
+                &:last-child {
+                    -webkit-transform: rotate(-225deg);
+                    -ms-transform: rotate(-225deg);
+                    -o-transform: rotate(-225deg);
+                    transform: rotate(-225deg);
+                    top: -10px;
+                }
+                &:nth-child(2) {
+                    opacity: 0;
+                }
+            }
+        }
+    }
+    .btn_row {
+        height: 2px;
+        width: 100%;
+        margin: 3px 0;
+        background-color: $text;
+        position: relative;
+        transition: all .5s;
+    }
+    .menu {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        bottom: 0;
+        width: 100%;
+        height: 100vh;
+        max-width: 300px;
+        background-color: #fff;
+        display: block;
+        z-index: 9;
+        padding-top: 15px;
+        transition: all .5s ease;
+        &.open {
+            right: 0;
+        }
+        &__link {
+            color: #333;
+            display: block;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    }
+    .menu__bg {
+        transition: all .5s ease;
+        &.open {
+            position: fixed;
+            background: #33333373;
+            width: 100%;
+            height: 100vh;
+            left: 0;
+            top: 0;
+            z-index: -1;
+        }
+    }
 }
 
 // ≥992px
-@include media-breakpoint-down(md) {
-
+@media only screen and (max-width: 992px) {
+    .desctop-card {
+        display: none;
+    }
+    .mobile-card {
+        display: block;
+        padding: 20px 0;
+        text-align: center;
+    }
+    .sub-title {
+        font-size: 18px;
+        margin-bottom: 10px;
+    }
+    .title {
+        font-size: 24px;
+        margin-bottom: 16px;
+    }
+    .mobile-services {
+        margin-top: 25px;
+    }
+    .doctor__list {
+        max-width: 480px;
+        padding: 20px;
+        text-align: center;
+        margin: 0 auto 23px;
+    }
+    .doctor__desc {
+        text-align: center;
+    }
+    .doctor__mobile {
+        display: flex;
+        justify-content: center;
+    }
+    .doctor__title {
+        font-size: 24px;
+        margin-bottom: 35px;
+    }
+    .sign-up-mobile {
+        .btn {
+            margin: 5px;
+        }
+    }
+    section {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
 
 // ≥768px
@@ -20,7 +168,7 @@
 
 // ≥576px
 @include media-breakpoint-down(xs) {
-
+    
 }
 
 
