--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -161,10 +161,15 @@ strong {
     -webkit-text-fill-color: transparent;
     margin-bottom: 16px;
 }
-
+.review__desc {
+    a {
+        white-space: nowrap;
+    }
+}
 section {
     padding-top: 64px;
     padding-bottom: 64px;
+    overflow-x: hidden;
 }
 .bottom-section {
     padding-bottom: 130px;
@@ -645,8 +650,8 @@ section {
 }
 .img-arround {
     float: right;
-    width: 533px;
-    height: 533px;
+    max-width: 533px;
+    height: auto;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -656,7 +661,7 @@ section {
 .our-works-section {
     text-align: center;
     position: relative;
-    min-height: 700px;
+    min-height: 740px;
     .container {
         max-width: 1430px;
     }
@@ -665,7 +670,7 @@ section {
         position: absolute;
         left: 15px;
         right: 15px;
-        bottom: 15px;
+        bottom: 50px;
         margin: auto;
 
     }
@@ -1197,7 +1202,6 @@ section {
     position: relative;
     .header {
         background: rgba(255, 255, 255, 0.5);
-        backdrop-filter: blur(84px);
     }
     .container {
         max-width: 1430px;
