--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -305,7 +305,7 @@ section {
                 position: absolute;
                 left: 0;
                 bottom: -5px;
-                width: 118px;
+                width: 100%;
                 height: 4px;
                 background: $liner-gradient;
                 border-radius: 1px;
@@ -553,6 +553,13 @@ section {
 }
 .veneers-section {
     width: 100%;
+}
+.veneers-video {
+    max-width: 580px;
+    width: 100%;
+    border-radius: 20px;
+    position: relative;
+    z-index: 2;
 }
 .content {
     max-width: 450px;
@@ -1077,7 +1084,7 @@ section {
         display: inline-block;
         transition: all .3s ease;
         &:hover {
-            color: $accent;
+            color: #e6e6e6;
         }
     }
 }
